feat: Add styling and the widget code

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<h2 class="center">
+    Welcome to the greatest experience widget page ever!
+</h2>
+
+
+<div id="bookingKitContainer" data-cw="c0deac7a38aaa484231435031274cb47"></div>
+<script src="https://b707c044cfb128996c18526fb80fc6ac-widget-release.test.bookingkit.net/bkscript/c0deac7a38aaa484231435031274cb47/" async></script>
 
 </body>
 </html>
