--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     Welcome to the greatest experience widget page ever!
 </h2>
     
-<div id="bookingKitContainer" data-cw="a4111765ae7e57674de9382d53584b3a"></div>
-<script src="https://5dacd5855763d4dcbc5ab069d5288bd3-widget-release.test.bookingkit.net/bkscript/a4111765ae7e57674de9382d53584b3a/" async></script>
+<div id="bookingKitContainer" data-cw="9f6bf3b1dfa561f60d922d4c851b1ab6"></div>
+<script src="https://07136f733313484a40b0b530fe736bda.widget-stage.bookingkit.net/bkscript/9f6bf3b1dfa561f60d922d4c851b1ab6/" async></script>
 
 </body>
 </html>
